Add HLS generation and playback support

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "tunnel": "cloudflared tunnel --url http://localhost:3000"
+    "tunnel": "cloudflared tunnel --url http://localhost:3000",
+    "hls": "node scripts/generate-hls.js"
   },
   "dependencies": {
     "express": "^4.19.2",
