--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "dev": "NODE_ENV=development node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js",
     "tunnel": "cloudflared tunnel --url http://localhost:3000",
     "hls": "node scripts/generate-hls.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "next": "^15.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "hls.js": "^1.5.18"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.7.2"
   }
 }
