Add quick Cloudflare tunnel script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev:server": "NODE_ENV=development node server.js",
     "dev:frontend": "next dev -p 3001",
+    "tunnel:quick": "bash scripts/quick-tunnel.sh",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "tunnel": "cloudflared tunnel --url http://localhost:3000",
