--- a/uploader/package.json
+++ b/uploader/package.json
@@ -7,6 +7,7 @@
     "upload": "bun run index.ts"
   },
   "dependencies": {
+    "neverthrow": "^6.2.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
