--- a/uploader/package.json
+++ b/uploader/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "neverthrow": "^6.2.2",
+    "ink": "^5.0.1",
+    "react": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
